Initial invitations code
